src/test/resources/de/uni_luebeck/isp/tessla/interpreter/tests/errors/undefined-named-arg.tessla
def sonMacro(mit: Int) := mit+1

out sonMacro(miut = 41)